--- a/src/Panama/View/EditControls/TitleEdit2.xaml
+++ b/src/Panama/View/EditControls/TitleEdit2.xaml
@@ -5,13 +5,145 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
+    xmlns:core="clr-namespace:Restless.Panama.Core"
+    xmlns:r="clr-namespace:Restless.Panama.Resources"
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:TitleViewModel}"
     mc:Ignorable="d" 
-    d:DesignHeight="450" d:DesignWidth="400"
-    Style="{StaticResource DataEntryPanelStyle}">
+    d:DesignHeight="650" d:DesignWidth="400">
     
     <!-- Title edit 2 (versions) -->
-    <TextBlock Text="Versions"/>
-    <Border Background="LightBlue" Height="32"/>
+    <Grid>
+        <tk:DataGrid
+            Style="{StaticResource DataGridEditLockedStyle}"
+            ItemsSource="{Binding Versions.MainSource.View}"
+            SelectedItem="{Binding Versions.SelectedItem}"
+            tk:DataGridColumns.Columns="{Binding Versions.Columns}" 
+            ContextMenuOpeningCommand="{Binding Versions.Commands[ContextMenuOpening]}">
+            <DataGrid.ContextMenu>
+                <ContextMenu ItemsSource="{Binding Versions.MenuItems}"  />
+            </DataGrid.ContextMenu>
+            <DataGrid.InputBindings>
+                <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding OpenRowCommand}"/>
+            </DataGrid.InputBindings>
+        </tk:DataGrid>
+        <TextBlock
+            tk:Property.IsCollapsed="{Binding Versions.HaveVersion}"
+            Foreground="{StaticResource LightForegroundBrush}"
+            VerticalAlignment="Center"
+            HorizontalAlignment="Center"
+            Text="{x:Static r:Strings.TextNoTitleVersions}"/>
+    </Grid>
+    <!-- Action buttons for version -->
+    <StatusBar>
+        <StatusBar.Resources>
+            <Style TargetType="tk:IconButton" BasedOn="{StaticResource SmallIconButtonStyle}"/>
+        </StatusBar.Resources>
+        <tk:IconButton 
+            Padding="0"
+            Icon="{StaticResource ArrowUpMediumIconKey}"
+            Command="{Binding Versions.Commands[VersionMoveUp]}"/>
+        
+        <tk:IconButton
+            Padding="0"
+            Icon="{StaticResource ArrowDownMediumIconKey}"
+            Command="{Binding Versions.Commands[VersionMoveDown]}"/>
+        
+        <Separator/>
+        
+        <tk:IconButton
+            Content="File"
+            Icon="{StaticResource SquareSmallGreenIconKey}"
+            Command="{Binding Versions.Commands[VersionAddByFile]}"/>
+        
+        <tk:IconButton
+            Content="Replace"
+            Icon="{StaticResource SquareSmallGrayIconKey}"
+            Command="{Binding Versions.Commands[VersionReplace]}"/>
+        
+        <tk:IconButton
+            Content="Remove"
+            Icon="{StaticResource XSmallRedIconKey}"
+            Command="{Binding Versions.Commands[VersionRemove]}"/>
+        
+        <Separator/>
+        
+        <tk:IconButton
+            Content="Sync"
+            Icon="{StaticResource SquareSmallBlueIconKey}"
+            Command="{Binding Versions.Commands[VersionSync]}"/>
+    </StatusBar>
+    
+    <StackPanel 
+        Style="{StaticResource DataEntryPanelStyle}"
+        tk:Property.IsNullCollapsed="{Binding Versions.SelectedVersion}">
+        <TextBlock Text="Note"/>
+        <TextBox Text="{Binding Versions.SelectedVersion.Note}"/>
 
+        <Expander Header="Internal File Properties" IsExpanded="False">
+            
+            <Grid tk:Property.RowHeights="*,Auto">
+                <!-- Only displays when the selected version is Open Xml -->
+                <Grid 
+                    tk:Property.RowHeights="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto"
+                    tk:Property.ColumnWidths="*,*"
+                    tk:Property.IsVisible="{Binding Versions.IsOpenXml}">
+
+                    <TextBlock Text="Created"/>
+                    <TextBlock Grid.Row="1" Text="{Binding Versions.Properties.Core.Created}"/>
+
+                    <TextBlock Grid.Column="1" Text="Modified"/>
+                    <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Versions.Properties.Core.Modified}"/>
+
+                    <TextBlock Grid.Row="3" Text="Title"/>
+                    <TextBox Grid.Row="4" Text="{Binding Versions.Properties.Core.Title}"/>
+
+                    <TextBlock Grid.Row="3" Grid.Column="1" Text="Description / Comment"/>
+                    <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding Versions.Properties.Core.Description}"/>
+
+                    <TextBlock Grid.Row="5" Text="Subject"/>
+                    <TextBox Grid.Row="6" Text="{Binding Versions.Properties.Core.Subject}"/>
+
+                    <TextBlock Grid.Row="5" Grid.Column="1" Text="Company"/>
+                    <TextBox Grid.Row="6" Grid.Column="1" Text="{Binding Versions.Properties.Extended.Company}"/>
+
+                    <tk:IconButton
+                        Grid.Row="7"
+                        Grid.Column="1"
+                        Margin="{StaticResource DataEntryPanelAltControlMargin}"
+                        Style="{StaticResource SmallIconButtonStyle}"
+                        Width="62"
+                        HorizontalAlignment="Right"
+                        Icon="{StaticResource SaveMediumIconKey}"
+                        Content="Save"
+                        Command="{Binding Versions.Commands[SaveProperty]}"/>
+
+                    <TextBlock
+                        Grid.Row="8"
+                        Grid.ColumnSpan="2"
+                        FontSize="{StaticResource MediumFontSize}"
+                        Text="{x:Static r:Strings.HeaderVersionProperties}"/>
+                </Grid>
+                <!-- Only displays when the selected version is not Open Xml -->
+                <TextBlock
+                    Grid.Row="1"
+                    HorizontalAlignment="Center"
+                    Style="{StaticResource TextBlockError}" Margin="8"
+                    Text="{x:Static r:Strings.TextNotOpenXmlDocument}"
+                    tk:Property.IsCollapsed="{Binding Versions.IsOpenXml}"/>
+            </Grid>
+        </Expander>
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </StackPanel>
 </StackPanel>
