--- a/src/Panama/Resources/Dictionary/ListBox.xaml
+++ b/src/Panama/Resources/Dictionary/ListBox.xaml
@@ -1,5 +1,32 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+
+    <Style x:Key="DefaultListBoxStyle" TargetType="ListBox" BasedOn="{StaticResource DefaultControlStyle}">
+        <Setter Property="Background" Value="{StaticResource DefaultBackgroundBrush}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource DefaultBorderBrush}"/>
+
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="ItemContainerStyle">
+            <Setter.Value>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="Margin" Value="0"/>
+                    <Setter Property="Padding" Value="5"/>
+                    <Setter Property="BorderBrush" Value="{StaticResource LightBorderBrush}"/>
+                    <Setter Property="BorderThickness" Value="0,0,0,1"/>
+                    <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                </Style>
+            </Setter.Value>
+        </Setter>
+        <Style.Resources>
+            <Style TargetType="TextBlock">
+                <Setter Property="Margin" Value="0"/>
+                <Setter Property="Foreground" Value="{StaticResource DefaultForegroundBrush}"/>
+            </Style>
+        </Style.Resources>
+    </Style>
+
+    <Style TargetType="ListBox" BasedOn="{StaticResource DefaultListBoxStyle}"/>
+
 </ResourceDictionary>
