--- a/src/Panama/View/EditControls/TitleEditContainer.xaml
+++ b/src/Panama/View/EditControls/TitleEditContainer.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl 
-    x:Class="Restless.Panama.View.TitleEdit"
+    x:Class="Restless.Panama.View.TitleEditContainer"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,48 +8,62 @@
     xmlns:vw="clr-namespace:Restless.Panama.View" 
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:TitleViewModel}"
     mc:Ignorable="d" 
-    d:DesignHeight="1000" d:DesignWidth="330">
-    <Grid tk:Property.RowHeights="Auto,Auto,Auto,Auto,Auto,*">
+    d:DesignHeight="800" d:DesignWidth="330">
+    <DockPanel tk:Property.RowHeights="Auto,Auto,*,Auto,Auto,Auto,*">
         <tk:RadioButtonPanel
+            DockPanel.Dock="Top"
             Margin="0,0,0,8"
-            tk:Property.ColumnWidths="Auto,Auto,Auto,Auto,Auto"
+            tk:Property.ColumnWidths="Auto,Auto,Auto,Auto,Auto,Auto"
             SelectedValue="{Binding SelectedEditSection}">
             
-            <tk:RadioButton Value="1" Content="Data"/>
-            <tk:RadioButton Grid.Column="1" Value="2" Content="Version"/>
-            <tk:RadioButton Grid.Column="2" Value="3" Content="Submission"/>
-            <tk:RadioButton Grid.Column="3" Value="4" Content="Published"/>
-            <tk:RadioButton Grid.Column="4" Value="5" Content="Preview"/>
+            <tk:RadioButton Grid.Column="0" Value="1" Content="Main"/>
+            <tk:RadioButton Grid.Column="1" Value="2" Content="Tags"/>
+            <tk:RadioButton Grid.Column="2" Value="3" Content="Version"/>
+            <tk:RadioButton Grid.Column="3" Value="4" Content="Submission"/>
+            <tk:RadioButton Grid.Column="4" Value="5" Content="Published"/>
+            <tk:RadioButton Grid.Column="5" Value="6" Content="Preview"/>
         </tk:RadioButtonPanel>
 
         <!-- Main title data -->
-        <vw:TitleEdit1
+        <vw:TitleEditMain
+            DockPanel.Dock="Top"
             Grid.Row="1"
             tk:Property.IsLongVisible="{Binding SelectedEditSection}"
             tk:Property.IsLongVisibleValue="1"/>
-
-        <!-- Versions -->
-        <vw:TitleEdit2
+        
+        <!-- Tags -->
+        <vw:TitleEditTag
+            DockPanel.Dock="Top"
             Grid.Row="2"
             tk:Property.IsLongVisible="{Binding SelectedEditSection}"
             tk:Property.IsLongVisibleValue="2"/>
-
-        <!-- Submissions -->
-        <vw:TitleEdit3
+        
+        <!-- Versions -->
+        <vw:TitleEditVersion
+            DockPanel.Dock="Top"
             Grid.Row="3"
             tk:Property.IsLongVisible="{Binding SelectedEditSection}"
             tk:Property.IsLongVisibleValue="3"/>
 
-        <!-- Published -->
-        <vw:TitleEdit4
+        <!-- Submissions -->
+        <vw:TitleEditSubmission
+            DockPanel.Dock="Top"
             Grid.Row="4"
             tk:Property.IsLongVisible="{Binding SelectedEditSection}"
             tk:Property.IsLongVisibleValue="4"/>
 
-        <!-- Preview -->
-        <vw:TitleEdit5
+        <!-- Published -->
+        <vw:TitleEditPublished
+            DockPanel.Dock="Top"
             Grid.Row="5"
             tk:Property.IsLongVisible="{Binding SelectedEditSection}"
             tk:Property.IsLongVisibleValue="5"/>
-    </Grid>
+
+        <!-- Preview -->
+        <vw:TitleEditPreview
+            DockPanel.Dock="Top"
+            Grid.Row="6"
+            tk:Property.IsLongVisible="{Binding SelectedEditSection}"
+            tk:Property.IsLongVisibleValue="6"/>
+    </DockPanel>
 </UserControl>
