--- a/src/Panama/View/EditControls/TitleEditPublished.xaml
+++ b/src/Panama/View/EditControls/TitleEditPublished.xaml
@@ -1,32 +1,16 @@
-﻿<UserControl 
+﻿<StackPanel
     x:Class="Restless.Panama.View.TitleEditPublished"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
-    xmlns:view="clr-namespace:Restless.Panama.View"
+    xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:TitleViewModel}"
     mc:Ignorable="d" 
-    d:DesignHeight="300" d:DesignWidth="554">
-    <StackPanel>
-        <DataGrid
-            x:Name="grid"
-            Style="{StaticResource DataGridEdit}"
-            ItemsSource="{Binding Path=Published.DataView}"
-            SelectedItem="{Binding Published.SelectedItem}"
-            tk:DataGridColumns.Columns="{Binding Published.Columns}">
-            <DataGrid.RowStyle>
-                <Style TargetType="DataGridRow">
-                    <Setter Property="tk:DataGrid.DoubleClickCommand" Value="{Binding ElementName=grid, Path=DataContext.Published.OpenRowCommand}"/>
-                </Style>
-            </DataGrid.RowStyle>
-        </DataGrid>
-        <ToolBarTray>
-            <ToolBar Style="{StaticResource ToolBarCommandHolder}">
-                <Button Command="{Binding Published.Commands[PublishedAdd]}" Content="Add" ToolTip="Add a published entry"/>
-                <Button Command="{Binding Published.Commands[PublishedRemove]}" Content="Remove" ToolTip="Remove the selected entry"/>
-            </ToolBar>
-        </ToolBarTray>
-        <view:PublishedEdit Visibility="{Binding Published.EditVisibility}"/>
-    </StackPanel>
-</UserControl>
+    d:DesignHeight="450" d:DesignWidth="400"
+    Style="{StaticResource DataEntryPanelStyle}">
+    <!-- Title edit 5 (published) -->
+    <TextBlock Text="Published"/>
+    <Border Background="PeachPuff" Height="32"/>
+
+</StackPanel>
