--- a/src/Panama/View/Windows/MainWindow.xaml
+++ b/src/Panama/View/Windows/MainWindow.xaml
@@ -31,10 +31,10 @@
             </MenuItem>
             <MenuItem Header="_Settings">
                 <MenuItem Header="Authors" Icon="{StaticResource ImageUserMenu}" Command="{Binding Commands[Author]}" />
-                <MenuItem Header="Tags" Icon="{StaticResource ImageTagMenu}" Command="{Binding Commands[Tag]}"/>
+                <MenuItem Header="Tags" Icon="{StaticResource TagIconKey}" Command="{Binding Commands[Tag]}"/>
                 <MenuItem Header="Credentials" Icon="{StaticResource ImageCredentialMenu}" Command="{Binding Commands[Credential]}"/>
                 <Separator />
-                <MenuItem Header="Settings" Icon="{StaticResource ImageConfigMenu}" Command="{Binding Commands[Config]}" />
+                <MenuItem Header="Settings" Icon="{StaticResource SettingsIconKey}" Command="{Binding Commands[Config]}" />
             </MenuItem>
             <MenuItem Header="_Other">
                 <MenuItem Header="Alerts" Icon="{StaticResource ImageCalendarMenu}" Command="{Binding Commands[Alert]}"/>
