--- a/src/Panama/Resources/Dictionary/Border.xaml
+++ b/src/Panama/Resources/Dictionary/Border.xaml
@@ -3,11 +3,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
     <Style x:Key="MainContentBorderStyle" TargetType="Border">
-        <Setter Property="Padding" Value="10"/>
+        <Setter Property="Padding" Value="{StaticResource DefaultPadding}"/>
     </Style>
 
     <Style x:Key="BorderEditContainerStyle" TargetType="Border">
-        <Setter Property="Padding" Value="10"/>
+        <Setter Property="Padding" Value="{StaticResource DefaultPadding}"/>
     </Style>
 
 </ResourceDictionary>
