--- a/src/Panama/Resources/Dictionary/HeaderedContentControl.xaml
+++ b/src/Panama/Resources/Dictionary/HeaderedContentControl.xaml
@@ -1,61 +1,62 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:tk="http://schemas.restless.toolkit.com/2021">
 
-    <!-- Defines a style to use for HeaderedContentControl Border elements -->
-    <Style TargetType="Border" x:Key="HCCHeaderBorder">
-        <Setter Property="BorderBrush" Value="DarkGray" />
-        <Setter Property="BorderThickness" Value="0" />
-        <Setter Property="Padding" Value="3" />
-        <Setter Property="Background" Value="{StaticResource HeaderBrush}"/>
+    <Style x:Key="HeaderedContentControlHeaderBorderStyle" TargetType="Border">
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Padding" Value="4"/>
+        <Setter Property="Background" Value="{StaticResource DefaultHeaderBrush}"/>
+        <Setter Property="TextElement.Foreground" Value="{StaticResource DefaultForegroundBrush}"/>
+        <Setter Property="TextElement.FontSize" Value="11"/>
     </Style>
 
-    <Style TargetType="Border" x:Key="HCCContentBorder">
-        <Setter Property="BorderBrush" Value="DarkGray" />
-        <Setter Property="BorderThickness" Value="1" />
-        <Setter Property="Margin" Value="3" />
-        <Setter Property="Padding" Value="3" />
-    </Style>
-
-    <Style TargetType="TextBlock" x:Key="HCCHeaderText" BasedOn="{StaticResource {x:Type TextBlock}}">
-        <Setter Property="FontSize" Value="11"/>
-        <Setter Property="Foreground" Value="Black"/>
+    <Style x:Key="HeaderedContentControlContentBorderStyle" TargetType="Border">
+        <Setter Property="BorderBrush" Value="{StaticResource DefaultBorderBrush}" />
+        <Setter Property="BorderThickness" Value="1"/>
     </Style>
 
     <!-- Defines a style to use on HeaderedContentControl elements. -->
-    <Style TargetType="HeaderedContentControl">
+    <Style x:Key="DefaultHeaderedContentControlStyle" TargetType="HeaderedContentControl">
+        <Setter Property="Padding" Value="{StaticResource DefaultPadding}"/>
+        <Setter Property="IsTabStop" Value="False"/>
+        
         <Setter Property="HeaderTemplate">
             <Setter.Value>
                 <DataTemplate>
-                    <Border Style="{StaticResource HCCHeaderBorder}">
-                        <TextBlock Style="{StaticResource HCCHeaderText}" Text="{TemplateBinding Content}" />
+                    <Border Style="{StaticResource HeaderedContentControlHeaderBorderStyle}">
+                        <TextBlock Text="{TemplateBinding Content}"/>
                     </Border>
                 </DataTemplate>
             </Setter.Value>
         </Setter>
-        <Setter Property="IsTabStop" Value="False" />
+        
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="HeaderedContentControl">
-                    <Border Style="{StaticResource HCCContentBorder}" BorderThickness="{TemplateBinding BorderThickness}">
-                        <DockPanel>
-                            <ContentPresenter DockPanel.Dock="Top"  ContentSource="Header" />
-                            <ContentPresenter ContentSource="Content" ContentTemplate="{TemplateBinding ContentTemplate}" />
-                        </DockPanel>
+                    <Border Style="{StaticResource HeaderedContentControlContentBorderStyle}" BorderThickness="{TemplateBinding BorderThickness}">
+                        <Grid tk:Property.RowHeights="Auto,*">
+                            <ContentPresenter ContentSource="Header"/>
+                            <ContentPresenter
+                                Grid.Row="1"
+                                Margin="{TemplateBinding Padding}"
+                                ContentTemplate="{TemplateBinding ContentTemplate}" />
+                        </Grid>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
 
-    <Style TargetType="HeaderedContentControl" x:Key="HCCTool" BasedOn="{StaticResource {x:Type HeaderedContentControl}}">
-        <Setter Property="Margin" Value="4"/>
+    <Style TargetType="HeaderedContentControl" BasedOn="{StaticResource DefaultHeaderedContentControlStyle}"/>
+
+    <!--<Style TargetType="HeaderedContentControl" x:Key="HCCTool" BasedOn="{StaticResource {x:Type HeaderedContentControl}}">
         <Style.Resources>
             <Style TargetType="DataGrid" BasedOn="{StaticResource {x:Type DataGrid}}">
                 <Setter Property="AutoGenerateColumns" Value="False"/>
                 <Setter Property="Margin" Value="0,3"/>
             </Style>
         </Style.Resources>
-    </Style>
+    </Style>-->
 
 </ResourceDictionary>
