--- a/src/Panama/View/TagView.xaml
+++ b/src/Panama/View/TagView.xaml
@@ -2,44 +2,44 @@
     x:Class="Restless.Panama.View.TagView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:view="clr-namespace:Restless.Panama.View"
-    xmlns:tk="http://schemas.restless.toolkit.com/2021"    
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:tk="http://schemas.restless.toolkit.com/2021"
+    xmlns:r="clr-namespace:Restless.Panama.Resources"
+    xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:TagViewModel}"
     mc:Ignorable="d"
-    d:DesignWidth="860" d:DesignHeight="400">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1.5*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="{StaticResource GridRowHeightTool}" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <!-- Controls specific to this view-->
-        <Grid Grid.Column="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <view:SimpleRowFilter Grid.Column="0" HorizontalAlignment="Left" />
-            <ItemsControl Grid.Column="1" HorizontalAlignment="Right" Style="{StaticResource ItemsControlMenu}" ItemsSource="{Binding Path=VisualCommands}"/>
-        </Grid>
+    d:DesignWidth="400" d:DesignHeight="200">
+    <Grid tk:Property.ColumnWidths="*,*">
 
-        <!-- Main data grid to display the tabular data  -->
-        <Border Grid.Row="1" Grid.Column="0" Style="{StaticResource BorderEditContainerStyle}">
-            <DataGrid ItemsSource="{Binding Path=MainSource.View}" SelectedItem="{Binding SelectedItem}" tk:DataGridColumns.Columns="{Binding Columns}">
+        <HeaderedContentControl Margin="2,0" Header="{x:Static r:Strings.MenuItemTags}">
+            <DataGrid
+                CanUserSortColumns="False"
+                ItemsSource="{Binding ListView}" 
+                SelectedItem="{Binding SelectedItem}"
+                tk:DataGridColumns.Columns="{Binding Columns}">
                 <DataGrid.ContextMenu>
                     <ContextMenu ItemsSource="{Binding MenuItems}"/>
                 </DataGrid.ContextMenu>
-            </DataGrid>
-        </Border>
+            </DataGrid>            
+            
+        </HeaderedContentControl>
+
+        <HeaderedContentControl
+            Grid.Column="1"
+            Margin="2,0"
+            Header="{Binding SelectedTag.Tag}"
+            Visibility="{Binding EditVisibility}">
+            <Grid
+                tk:Property.RowHeights="Auto,Auto,Auto,Auto"
+                Style="{StaticResource DataEntryPanelStyle}">
+
+                <TextBlock Text="Tag Name"/>
+                <TextBox Grid.Row="1" Text="{Binding SelectedTag.Tag}" />
+                <TextBlock Grid.Row="2" Text="Description"/>
+                <TextBox Grid.Row="3" Text="{Binding SelectedTag.Description}" />
+            </Grid>
+            
+        </HeaderedContentControl>
         
-        <!-- Nested editing control on the right -->
-        <Border Grid.Row="1" Grid.Column="1" Style="{StaticResource BorderEditContainerStyle}">
-            <view:TagEdit Visibility="{Binding EditVisibility}"/>
-        </Border>
     </Grid>
-    <!-- end main grid-->
 </UserControl>
