Update title view
Upon activation, update the tags so they are in the proper state. Restore last selection

--- a/src/Panama/View/TitleView.xaml
+++ b/src/Panama/View/TitleView.xaml
@@ -87,6 +87,7 @@
                 RowHeight="{Binding Config.DataGridRowHeight}"
                 ItemsSource="{Binding Path=MainSource.View}"
                 SelectedItem="{Binding SelectedItem}"
+                RestoreStateBehavior="RestoreLastSelection"
                 tk:DataGridColumns.Columns="{Binding Columns}"
                 RowStyle="{StaticResource TitleDataGridRowStyle}">
                 
