Settings (in progress)

--- a/src/Panama.Controls/Themes/Generic.xaml
+++ b/src/Panama.Controls/Themes/Generic.xaml
@@ -3,7 +3,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
     <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="pack://application:,,,/Panama.Controls;component/Themes/Generic/SimpleColorPicker.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/Panama.Controls;component/Themes/Generic/PathSelector.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/Panama.Controls;component/Themes/Generic/TagSelectorControl.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/Panama.Controls;component/Themes/Generic/TagSelectorItem.xaml"/>
     </ResourceDictionary.MergedDictionaries>
+    
 </ResourceDictionary>
