--- a/src/Panama/Resources/Dictionary/Panel.xaml
+++ b/src/Panama/Resources/Dictionary/Panel.xaml
@@ -2,6 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
+    xmlns:con="clr-namespace:Restless.Panama.Controls;assembly=Panama.Controls"
     xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
     <sys:Double x:Key="DataEntryPanelDefaultControlHeight">26</sys:Double>
@@ -28,6 +29,7 @@
         <Style.Resources>
             <Style TargetType="TextBlock" BasedOn="{StaticResource DataEntryPanelDefaultTextBlockStyle}"/>
             <Style TargetType="tk:LinkedTextBlock" BasedOn="{StaticResource DataEntryPanelDefaultLinkedTextBlockStyle}"/>
+            <Style x:Key="{x:Static con:PathSelector.TextBlockStyleKey}" TargetType="TextBlock" BasedOn="{StaticResource DataEntryPanelDefaultTextBlockStyle}"/>
 
             <Style TargetType="TextBox" BasedOn="{StaticResource DefaultTextBoxStyle}">
                 <Setter Property="Margin" Value="{StaticResource DataEntryPanelDefaultControlMargin}"/>
